fix styling of the edit form on tablets

--- a/src/app/myProfile/MyProfile.scss
+++ b/src/app/myProfile/MyProfile.scss
@@ -129,7 +129,11 @@
             width: 100%;
 
             @media (max-width: 768px) {
-                width: 100%;
+                width: 62vw;
+            }
+
+            @media (max-width: 500px) {
+                width: 76vw;
             }
         }
     
